--- a/Strings/AppResources.zh.resx
+++ b/Strings/AppResources.zh.resx
@@ -1345,7 +1345,7 @@
     <value>重度</value>
     <comment>Severe</comment>
   </data>
-  <data name="Settings.ClearCacheAlert.Message" xml:space="preserve">
+  <data name="Settings.ClearCacheSceneryAlert.Message" xml:space="preserve">
     <value>确认清除地景缓存？</value>
     <comment>Are you sure you want to clear the scenery cache?</comment>
   </data>
