--- a/Strings/AppResources.bg.resx
+++ b/Strings/AppResources.bg.resx
@@ -1341,7 +1341,7 @@
     <value>Силна</value>
     <comment>Severe</comment>
   </data>
-  <data name="Settings.ClearCacheAlert.Message" xml:space="preserve">
+  <data name="Settings.ClearCacheSceneryAlert.Message" xml:space="preserve">
     <value>Сигурни ли сте, че искате да изчистите топографичния кеш?</value>
     <comment>Are you sure you want to clear the scenery cache?</comment>
   </data>
