--- a/Strings/AppResources.he.resx
+++ b/Strings/AppResources.he.resx
@@ -1341,7 +1341,7 @@
     <value>רְצִינִי</value>
     <comment>Severe</comment>
   </data>
-  <data name="Settings.ClearCacheAlert.Message" xml:space="preserve">
+  <data name="Settings.ClearCacheSceneryAlert.Message" xml:space="preserve">
     <value>?האם אתה בטוח שברצונך לנקות את מטמון הנוף</value>
     <comment>Are you sure you want to clear the scenery cache?</comment>
   </data>
