--- a/Strings/AppResources.ru.resx
+++ b/Strings/AppResources.ru.resx
@@ -1341,7 +1341,7 @@
     <value>Сильная</value>
     <comment>Severe</comment>
   </data>
-  <data name="Settings.ClearCacheAlert.Message" xml:space="preserve">
+  <data name="Settings.ClearCacheSceneryAlert.Message" xml:space="preserve">
     <value>Вы уверены, что хотите очистить кеш ландшафта?</value>
     <comment>Are you sure you want to clear the scenery cache?</comment>
   </data>
