--- a/Strings/AppResources.tr.resx
+++ b/Strings/AppResources.tr.resx
@@ -1329,7 +1329,7 @@
     <value>Şiddetli</value>
     <comment>Severe</comment>
   </data>
-  <data name="Settings.ClearCacheAlert.Message" xml:space="preserve">
+  <data name="Settings.ClearCacheSceneryAlert.Message" xml:space="preserve">
     <value>Görünüm önbelleğini temizlemek istediğinizden emin misiniz?</value>
     <comment>Are you sure you want to clear the scenery cache?</comment>
   </data>
